--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,13 @@ packages = [{include = "billing_service"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.99.1"
-uvicorn = "^0.22.0"
-pydantic = "^1.10.11"
-sqlmodel = "^0.0.8"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.0.277"
 black = "^23.3.0"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
-pytest-asyncio = "^0.21.0"
-httpx = "^0.24.1"
+coverage = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core"]
